kubernetes/prod-without-helm/frontend/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: micros
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: micros
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: frontend
    spec:
      containers:
        - name: frontend
          image: javaoleg/micros-frontend:2024.0.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 80
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "curl --fail http://localhost || exit 1"
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "curl --fail http://localhost || exit 1"
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
