kubernetes/prod-without-helm/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: micros
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: frontend
  ports:
    - port: 80
      targetPort: 80
